# scrub

./: .gitignore  AUTHORS  ChangeLog  DISCLAIMER  META  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  bootstrap  configure  configure.ac  filldentry.c  filldentry.h  fillfile.c  fillfile.h  genrand.c  genrand.h  getsize.c  getsize.h  pad.c  progress.c  progress.h  scrub.1  scrub.c  scrub.conf.sample  scrub.spec  scrub.spec.in  sig.c  sig.h  util.c  util.h
.github/workflows/: build.yml
config/: .gitignore  ac_meta.m4  ac_pkgconfig.m4  aclocal.m4  config.h.in  x_ac_check_pthreads.m4
htdocs/: index.html  sfcopy
libscrub/: Makefile.am  Makefile.in  README  libscrub.c  libscrub.map  libscrub.pc.in  scrub.h  tscrub.c
man/: ChangeLog  Makefile.am  Makefile.in  scrub.1.in  scrub.conf.5.in
src/: Makefile.am  Makefile.in  aes.c  aes.h  filldentry.c  filldentry.h  fillfile.c  fillfile.h  genrand.c  genrand.h  getsize.c  getsize.h  hwrand.c  hwrand.h  pad.c  pattern.c  pattern.h  progress.c  progress.h  scrub.1  scrub.1.in  scrub.c  sig.c  sig.h  util.c  util.h
test/: .gitignore  Makefile.am  Makefile.in  README  aestest.c  pad.c  pat.c  t00  t00.exp  t01  t01.exp  t02  t02.exp  t03  t03.exp  t04  t04.exp  t05  t05.exp  t06  t06.exp  t07  t07.exp  t08  t08.exp  t09  t10  t10-cartman.exp  t10-manbearpig.exp  t10-marklar.exp  t10-timmy.exp  t11  t11.exp  t12  t12.exp  t13  t13.exp  t14  t14.exp  t15  (+20 more)
