bin_PROGRAMS = scrub

scrub_SOURCES = \
	aes.c \
	aes.h \
	filldentry.c \
	filldentry.h \
	fillfile.c \
	fillfile.h \
	genrand.c \
	genrand.h \
	getsize.c \
	getsize.h \
	hwrand.c \
	hwrand.h \
	pattern.c \
	pattern.h \
	progress.c \
	progress.h \
	scrub.c \
	sig.c \
	sig.h \
	util.c \
	util.h

scrub_LDADD = $(LIBPTHREAD) $(LIBPROP)
